--- a/src/styling/globals.scss
+++ b/src/styling/globals.scss
@@ -104,6 +104,12 @@ p.para{
     }
   }
 
+  &.center{
+    margin: 0 auto;
+    display: flex;
+    max-width: max-content;
+  }
+
   &.sm{
     padding: 0.5em 1em !important;
 
