--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -836,7 +836,7 @@
             transform: translateY(-50%);
             width: $ss;
             height: $ss;
-            background: url(../images/white-tick.svg) center/50% 50% no-repeat;
+            background: url(/images/white-tick.svg) center/50% 50% no-repeat;
             z-index: 5;
         }
     }
@@ -1542,14 +1542,34 @@
 .apply-offer-strip{
     position: relative;
     display: flex;
+
+    span{
+        font-size: 18px;
+        font-weight: 500;
+        color: white;
+    }
 }
 .apply-offer-strip{
     position: relative;
     display: flex;
     align-items: center;
+    gap: 12px;
     background: linear-gradient(#00A0E3, #0DAEF1);
-    padding: 0em 1em;
+    padding: 1em 1em;
     border-radius: 5px;
+    cursor: pointer;
+
+    &:after{
+        content: '';
+        width: 80px;
+        height: 28px;
+        background: url(/images/arrow-bx.svg) center/contain no-repeat ;
+        position: absolute;
+        top: 50%;
+        right: 1em;
+        transform: translateY(-50%);
+        z-index: 5;
+    }
 
     input{
         outline: none;
@@ -1652,6 +1672,10 @@
     background: #FFF;
     border: 1px solid rgba($color: #000000, $alpha: 0.15);
 
+    &:not(:last-child){
+        margin-bottom: 15px;
+    }
+
     .cart-img{
         position: relative;
         $ss: 100px;
@@ -1660,7 +1684,9 @@
         min-width: $ss;
         min-height: $ss;
         border-radius: 10px;
+        border: 1px solid rgba($color: #000000, $alpha: 0.08);
         background: #D9D9D9;
+        overflow: hidden;
     }
 
     .cart-det{
@@ -2006,5 +2032,95 @@
         span{
             pointer-events: none;
         }
+    }
+}
+.error-code-bar{
+    position: relative;
+    padding: 5px 10px;
+    padding-right: 15px;    
+    border: 1px solid #f22525;
+    border-radius: 8px;
+    max-width: max-content;
+
+    svg path{
+        fill: #f22525;
+    }
+
+    span{
+        font-size: 14px;
+        font-weight: 500;
+        color: #f22525;
+    }
+}
+.status{
+    padding: 5px 10px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: max-content;
+    font-weight: 500;
+
+    &.success{
+        background: rgba(14, 118, 18, 0.05);
+        border: 1px solid #0e7612;
+        color: #0e7612;
+    }
+    &.failed{
+        background: rgba(203, 53, 16, 0.05);
+        border: 1px solid #cb3510;
+        color: #cb3510;
+    }
+}
+.apply-coupon-wrap {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+.coupons-list{
+    margin-top: 1.2em;
+}
+.coupon-wrap{
+    width: 100%;
+    position: relative;
+    cursor: pointer;
+    border: 1px solid #a47e1b;
+    border-radius: 8px;
+    padding: 1.3em 1em;
+    background: #f9f8f3;
+    margin-bottom: 0.5em;
+
+    &.disabled{
+        background: #fafafa;
+        border: 1px solid #9c9c9c;
+        opacity: 0.85;
+        cursor: not-allowed;
+
+        .apply{
+            color: #7f7f7f;
+        }
+    }
+
+    h3{
+        font-weight: 500;
+        font-size: 18px;
+        margin-bottom: 8px;
+        color: $dark;
+    }
+
+    p{
+        color: #808080;
+        font-size: 14px;
+        line-height: 140%;
+        margin-bottom: 0;
+    }
+
+    .apply{
+        position: absolute;
+        top: 1.2em;
+        right: 1.2em;
+        font-size: 14px;
+        font-weight: 500;
+        color: #a47e1b;
     }
 }
