--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -666,6 +666,7 @@
         position: relative;
         font-size: 42px;
         margin-bottom: 0.35em;
+        text-transform: capitalize !important;
     }
 }
 .flt-ot-bar{
