--- a/src/styling/globals.scss
+++ b/src/styling/globals.scss
@@ -319,6 +319,11 @@ $trans: 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
     font-weight: 400;
     text-align: center;
     color: $white;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+            line-clamp: 1; 
+    -webkit-box-orient: vertical;
   }
 
 }
