--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -2230,3 +2230,31 @@ input.error{
     background: rgba(200, 17, 17, 0.05) !important;
     box-shadow: 0px 0px 0px 5px rgba(200, 17, 17, 0.25) !important;
 }
+.search-icon{
+    cursor: pointer;
+    
+}
+.filter-sidebar{
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding-top: 0;
+
+    >*:nth-child(1){
+        position: sticky;
+        top: 0;
+        z-index: 88;
+        background: white;
+        padding-top: 1em;
+        padding-bottom: 1em;
+        margin-bottom: 0 !important;
+    }
+}
+.filter-btn{
+    padding: 8px 15px;
+    border-radius: 8px;
+    background: rgba($color: #000000, $alpha: 0.05);
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    max-width: max-content;
+}
