--- a/src/styling/res.scss
+++ b/src/styling/res.scss
@@ -82,6 +82,14 @@
     }
 }
 @media(max-width:600px){
+    .archive-pr-wrapper .searched-text{
+        font-size: 24px;
+        line-height: 120%;
+    }
+    .filter-side-bar{
+        padding-right: 0;
+        border-right: 0px !important;
+    }
     .le_offer-grid{
         grid-template-columns: 1fr;
 
