--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -99,14 +99,19 @@
 .main-banner{
     position: relative;
     width: 100%;
-    height: 62vh;
-    min-height: 430px;
+    // height: 62vh;
+    // min-height: 430px;
+    padding-top: 29%;
     transition: 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
     display: block;
 
-    .container, .banner-inner-area{
-        min-height: 62vh;
+    @media(max-width:600px){
+        padding-top: 65% !important;
     }
+
+    // .container, .banner-inner-area{
+    //     min-height: 62vh;
+    // }
 
     > picture > img{
         position: absolute;
@@ -196,6 +201,10 @@
         font-size: 16px;
         font-weight: 400;
         margin-top: 15px;
+
+        @media(max-width:600px){
+            font-size: 12px;
+        }
     }
 }
 .home-cat-area{
@@ -2257,4 +2266,9 @@ input.error{
     align-items: center;
     gap: 5px;
     max-width: max-content;
+}
+.home-banner-area .swiper-button-disabled{
+    // pointer-events: unset !important;
+    opacity: 0 !important;
+    // cursor: not-allowed !important;
 }
