--- a/src/styling/navbar.scss
+++ b/src/styling/navbar.scss
@@ -49,7 +49,7 @@
                     display: inline-block;
                     line-height: $nav-height;
                     padding: 0px 0.5em;
-                    font-size: 13px;
+                    font-size: 12px;
                     font-weight: 400;
                     text-transform: uppercase;
                     min-width: max-content;
@@ -61,6 +61,13 @@
             display: flex;
             align-items: center;
             
+            .main-btn{
+                padding: 8px 15px;
+
+                span{
+                    font-size: 14px !important;
+                }
+            }
         }
     }
 }
