--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -2270,5 +2270,25 @@ input.error{
 .home-banner-area .swiper-button-disabled{
     // pointer-events: unset !important;
     opacity: 0 !important;
+    
     // cursor: not-allowed !important;
 }
+.cart-tot-det {
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    >div{
+
+        span:nth-child(2){
+            font-weight: 600;
+            color: black;
+            margin-left: 5px;
+        }
+    }
+  }
+  .cart-page .absolute.backdrop-blur-sm{
+    position: fixed !important;
+  }
