--- a/src/styling/res.scss
+++ b/src/styling/res.scss
@@ -83,9 +83,62 @@
     }
 }
 @media(max-width:600px){
+    .inner-steps > .container > .grid .l-part{
+        display: none;
+    }
+    .inner-steps > .container > .grid .r-part{
+        padding-left: 0;
+    }
+    .step-header .close{
+        right: 1.5em;
+    }
+    .le_offer-tag.moderate{
+        margin-left: 0 !important;
+    }
+    .cart-item{
+        padding: 1em;
+    }
+    .cart-item .cart-img{
+        width: 50px;
+        height: 50px;
+    }
+    .cart-det {
+        >.flex{
+            flex-wrap: wrap;
+           
+            >.flex{
+                flex-direction: row;
+                height: auto;
+                width: 100%;
+                justify-content: space-between;
+                align-items: center;
+                margin-top: 1em;
+            }
+        }
+    }
+    .lens-det-card label{
+        padding-right: 3em;
+    }
+    .main-btn.big{
+        padding: 1.2em 2.3em;
+    }
+    .step-header p{
+        text-align: left;
+    }
+    .step-header{
+        padding: 1.5em 1em;
+    }
     .archive-pr-wrapper .searched-text{
         font-size: 24px;
         line-height: 120%;
+    }
+    .step-bt-bar{
+        gap: 0.5em;
+        padding: 0.65em 1em;
+
+        >*{
+            flex: 1 1 auto;
+        }
     }
     .filter-side-bar{
         padding-right: 0;
