--- a/src/styling/navbar.scss
+++ b/src/styling/navbar.scss
@@ -1,10 +1,6 @@
-.main-nav{
+.main-nav-main{
     background: $dark;
-    display: flex;
-    align-items: center;
-    padding: 0px 3em;
-    justify-content: space-between;
-    $nav-height: 85px;
+    $nav-height: 55px;
 
     &.is-sticky{
         position: sticky;
@@ -13,65 +9,120 @@
         animation: slide-in 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955) ;
     }
 
-    .l-part{
+    .bottom-nav, .main-nav{
+        padding: 0px 3em;
+    }
+
+    .main-nav{
+        padding: 10px 3em;
+    }
+
+    .bottom-nav{
+        border-top: 1px solid rgba($color: #fff, $alpha: 0.1);
         display: flex;
         align-items: center;
+        width: 100%;
+        justify-content: space-between;
+    }
 
-        .logo{
-            display: inline-block;
-            height: $nav-height;
+    .nav-list{
+        display: flex;
+        align-items: center;
+        
+        @media(min-width: 600px){
+            padding-right: 0.5em;
+        }
 
-            img{
-                height: 100%;
-                width: 100%;
-                object-fit: contain;
+        li{
+
+            a{
+                color: white;
+                height: $nav-height;
+                display: inline-block;
+                line-height: $nav-height;
+                padding: 0px 1em;
+                font-size: 12px;
+                font-weight: 400;
+                text-transform: uppercase;
+                min-width: max-content;
             }
         }
     }
-    .r-part{
+    .main-nav{
         display: flex;
         align-items: center;
-        gap: 0em;
+        justify-content: space-between;
+        gap: 25px;
+        
+        .m-part{
+            flex: 1 1 auto;
+        }
 
-        .nav-list{
+        .l-part{
             display: flex;
             align-items: center;
-            
-            @media(min-width: 600px){
-                padding-right: 0.5em;
-            }
-
-            li{
-
-                a{
-                    color: white;
-                    height: $nav-height;
-                    display: inline-block;
-                    line-height: $nav-height;
-                    padding: 0px 0.5em;
-                    font-size: 12px;
-                    font-weight: 400;
-                    text-transform: uppercase;
-                    min-width: max-content;
+    
+            .logo{
+                display: inline-block;
+                height: $nav-height - 10px;
+    
+                img{
+                    height: 100%;
+                    width: 100%;
+                    object-fit: contain;
                 }
             }
         }
-
-        .ot-list{
+    
+        .r-part{
             display: flex;
             align-items: center;
-            
-            .main-btn{
-                padding: 8px 15px;
-
-                span{
-                    font-size: 14px !important;
+            gap: 0em;
+    
+           
+    
+            .ot-list{
+                display: flex;
+                align-items: center;
+                
+                .main-btn{
+                    padding: 5px 15px;
+    
+                    span{
+                        font-size: 14px !important;
+                    }
                 }
             }
         }
     }
 }
+.head-con-list{
+    display: flex;
+    align-items: center;
+}
+.con-ac{
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 13px;
+    // padding: 0px 15px;
+    padding-left: 15px;
+    gap: 5px;
 
+    span{
+        font-weight: 600;
+        width: 20px;
+        display: block;
+
+        svg{
+            width: 100%;
+        }
+    }
+
+    a{
+        opacity: 0.85;
+    }
+}
 @keyframes slide-in {
     0%{
         opacity: 0;
@@ -138,7 +189,7 @@
 .header-search-bar-container{
     position: relative;
     width: 100%;
-    max-width: 350px;
+    // max-width: 450px;
     $w: 120px;
 
     .search-icon{
@@ -223,6 +274,7 @@
         }
     }
 }
+
 .has-mega-menu{
     position: relative;
 
@@ -243,15 +295,15 @@
         .mega-menu-wrapper{
             pointer-events: unset;
             opacity: 1;
-            transform: translateX(-50%) translateY(0px);
+            transform: translateX(0%) translateY(0px);
         }
     }
 }
 .mega-menu-wrapper{
     position: fixed;
-    left: 50%;
-    transform: translateX(-50%) translateY(15px);
-    top: 80px;
+    left: 3em;
+    transform: translateX(0%) translateY(15px);
+    top: 120px;
     z-index: 999;
     min-width: 1024px;
     pointer-events: none;
