--- a/src/styling/res.scss
+++ b/src/styling/res.scss
@@ -84,9 +84,25 @@
     }
 }
 @media(max-width:600px){
+    .myacc-sidebar{
+        height: auto !important;
+        padding: 0 !important;
+    }
+    .bread-crumbs li h1 {
+        font-size: 16px;
+      }
     .inner-steps > .container > .grid .l-part{
         display: none;
     }
+    .myacc-list {
+        display: flex;
+        flex-direction: row;
+        overflow-x: auto;
+        overflow-y: hidden;
+      }
+      .myacc-list > a {
+        min-width: max-content;
+      } 
     .inner-steps > .container > .grid .r-part{
         padding-left: 0;
     }
