--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -462,8 +462,14 @@
     position: relative;
     width: 100%;
     padding-top: 100%;
-    border: 1px solid rgba($color: #000000, $alpha: 0.12);
+    border: 3px solid rgba($color: #000000, $alpha: 0.12);
     cursor: pointer;
+    opacity: 0.8;
+
+    &.active{
+        opacity: 1;
+        border: 3px solid $dark;
+    }
     
     img{
         position: absolute;
@@ -2363,4 +2369,16 @@ input.error{
         position: relative;
         z-index: 5;
     }
+}
+.loading-space{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,0.5);
+    cursor: not-allowed;
+    top: 0;
+    left: 0;
+    z-index: 55;
 }
