--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -1677,16 +1677,21 @@
             outline: none !important;
             transition: 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 
-            &:read-only{
+            &:not(select):read-only{
                 background: #e9e9e9;
                 cursor: not-allowed;
             }
+            
 
             &:not(:read-only):focus{
                 border: 1px solid var(--blue, #00A0E3);
                 background: #FFF;
                 box-shadow: 0px 0px 8px 0px rgba($color: #00A0E3, $alpha: 0.15);
             }
+        }
+
+        select{
+            cursor: pointer;
         }
     }
 }
@@ -1776,16 +1781,19 @@
         line-height: 100%;
     }
     p{
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-                line-clamp: 2; 
-        -webkit-box-orient: vertical;
-        line-height: 130%;
+        // overflow: hidden;
+        // display: -webkit-box;
+        // -webkit-line-clamp: 2;
+        //         line-clamp: 2; 
+        // -webkit-box-orient: vertical;
+        line-height: 140% !important;
     }
 }
 .mb-0{
     margin-bottom: 0 !important;
+}
+.hw-step-img{
+    border: 1px solid #dadada;
 }
 .cus-acc{
 
@@ -2372,7 +2380,7 @@ input.error{
 }
 .loading-space{
     position: absolute;
-    
+
     top: 0;
     left: 0;
     width: 100%;
