--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -1453,7 +1453,7 @@
         }
     }
 
-    input{
+    input, select{
         border: 1px solid rgba(0, 0, 0, 0.20);
         background: #FFF;
         padding: 0.8em 0.8em;
@@ -2036,6 +2036,7 @@
     border: 1px solid rgba($color: #000000, $alpha: 0.1);
     padding-top: 100%;
     position: relative;
+    cursor: zoom-in;
 
     img{
         position: absolute;
@@ -2256,7 +2257,7 @@
     }
   }
 
-input.error{
+input.error, select.error{
     border: 1px solid rgb(200, 17, 17) !important;
     background: rgba(200, 17, 17, 0.05) !important;
     box-shadow: 0px 0px 0px 5px rgba(200, 17, 17, 0.25) !important;
@@ -2390,4 +2391,17 @@ input.error{
     top: 0;
     left: 0;
     z-index: 55;
+}
+.green-text{
+    color: #0DAEF1;
+    font-weight: 600;
+}
+.zoom-preview{
+    width: 100%;
+    padding-top: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    pointer-events: none;
 }
