--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -2414,3 +2414,158 @@ input.error, select.error{
         }
     }
 }
+
+#download-brochure-btn {
+    position: fixed;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%) translateX(39%) rotate(-90deg);
+    z-index: 999999999;
+    border-radius: 16px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  
+.price-wrapper {
+    display: flex;
+    align-items: flex-end;
+    gap: 10px;
+  }
+  .price-wrapper .off {
+    font-size: 28px;
+    font-weight: 500;
+    color: #e87b7b;
+  }
+  .price-wrapper p {
+    font-size: 28px;
+  }
+  .price-wrapper .mrp {
+    font-size: 14px;
+    font-weight: 500;
+    color: rgba(0,0,0,0.5);
+
+    span{
+        text-decoration: line-through;
+        margin-right: 5px;
+        font-size: 18px;
+    }
+  }
+  .inner-header{
+    position: relative;
+    background: rgb(245, 253, 255);
+
+    .banner-con{
+        padding: 5em 0px;
+        text-align: center;
+    }
+  }
+  .inner-header{
+    position: relative;
+    background: rgb(234, 249, 255);
+
+    .banner-con{
+
+        h1{
+            font-size: 52px;
+            font-weight: 600;
+            margin-bottom: 0;
+            
+        }
+    }
+  }
+  .blog-card{
+    position: relative;
+    border: 1px solid rgba($color: #000000, $alpha: 0.15);
+    border-radius: 22px;
+    padding: 1.2em;
+
+    .main-btn{
+        width: 100%;
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 1em;
+    }
+
+    .blog-det{
+        padding-top: 1em;
+
+        h3{
+            font-size: 20px;
+            margin-bottom: 5px;
+            font-weight: 500;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2; 
+                    line-clamp: 2; 
+            -webkit-box-orient: vertical;
+        }
+
+        p{
+            margin-bottom: 0;
+            font-size: 16px;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+                    line-clamp: 3; 
+            -webkit-box-orient: vertical;
+        }
+    }
+
+    .blog-img{
+        position: relative;
+        overflow: hidden;
+        border-radius: 24px;
+        padding-top: 60%;
+        background: grey;
+
+        img{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+
+        }
+    }
+  }
+  .blog-grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 25px;
+
+  }
+
+  .blog-main{
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 3em 0px;
+
+    .sec-head{
+        margin-bottom: 2em;
+    }
+
+    .blog-img{
+        position: relative;
+        overflow: hidden;
+        border-radius: 32px;
+        padding-top: 50%;
+        background: grey;
+
+        img{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+
+        }
+    }
+  }
+  .blog-content-area{
+    margin-top: 2em;
+  }
