--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -1422,6 +1422,7 @@
                 text-transform: uppercase;
                 text-align: left;
                 font-size: 14px;
+                pointer-events: none;
             }
         }
     }
