--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -106,7 +106,10 @@
     display: block;
 
     @media(max-width:600px){
-        padding-top: 65% !important;
+        padding-top: 0% !important;
+        > picture > img{
+            position: static !important;
+        }
     }
 
     // .container, .banner-inner-area{
@@ -1439,6 +1442,18 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
+
+    >*{
+
+        &:nth-child(1){
+            grid-column: 2/3;
+            grid-row: 1;
+        }
+        &:nth-child(2){
+            grid-column: 1/2;
+            grid-row: 1;
+        }
+    }
 }
 .op-row{
     display: flex;
@@ -2682,3 +2697,26 @@ input.error, select.error{
         }
     }
   }
+.size-g-btn{
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
+    padding: 8px 15px;
+    border-radius: 100px;
+    background: white;
+    box-shadow: 0px 0px 10px 0px rgba($color: #000000, $alpha: 0.25);
+    z-index: 55;
+    cursor: pointer;
+}
+.modal-cl-btn{
+    position: absolute;
+    top: 0.5em;
+    right: 0.5em;
+    width: 45px;
+    height: 45px;
+    font-size: 24px;
+    background: black;
+    color: white;
+    border-radius: 50%;
+
+}
