--- a/src/styling/res.scss
+++ b/src/styling/res.scss
@@ -85,6 +85,16 @@
 }
 
 @media(max-width:600px){
+    .big-upload-btn span{
+        font-size: 14px;
+    }
+    .big-upload-btn{
+        padding: 12px 12px;
+
+        img{
+            width: 30px !important;
+        }
+    }
     .place-items-center.fixed.w-screen{
 
         .w-3\/4{
@@ -124,8 +134,23 @@
     .blog-grid{
         grid-template-columns: 1fr;
     }
+    // .re-le-wrapper{
+    //     grid-template-columns: 1fr;
+    // }
     .re-le-wrapper{
         grid-template-columns: 1fr;
+    
+        >*{
+    
+            &:nth-child(1){
+                grid-column: 1;
+                grid-row: 2/3;
+            }
+            &:nth-child(2){
+                grid-column: 1;
+                grid-row: 1/2;
+            }
+        }
     }
     .myacc-sidebar{
         height: auto !important;
