--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -2739,3 +2739,8 @@ input.error, select.error{
         max-width: 1000px;
     }
 }
+.addonlens{
+    margin-bottom: 0;
+    margin-top: 5px !important;
+    font-weight: 600 !important;
+}
