--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -2739,6 +2739,11 @@ input.error, select.error{
         max-width: 1000px;
     }
 }
+@media(max-width: 600px){
+    .pe-secc.container{
+        max-width: 85%;
+    }
+}
 .addonlens{
     margin-bottom: 0;
     margin-top: 5px !important;
